--- a/index.html
+++ b/index.html
@@ -102,7 +102,22 @@
         </div>
       </section>
       <!--some facts-->
-      <section class="some-facts"></section>
+      <section class="Our-Sponsors">
+        <div class="sponsor-info">
+          <h3 class="section-title">Our Sponsors</h3>
+          <p class="text-light-gray">
+            There are many variations of passages of Lorem Ipsum available, but
+            the majority have suffered alteration.
+          </p>
+        </div>
+        <div class="sponsor-compaines">
+          <img src="images/sponsors/spotify.png" alt="" />
+          <img src="images/sponsors/google.png" alt="" />
+          <img src="images/sponsors/amazon.png" alt="" />
+          <img src="images/sponsors/telerama.png" alt="" />
+          <img src="images/sponsors/figma.png" alt="" />
+        </div>
+      </section>
     </main>
     <footer></footer>
   </body>
